# cp-lab

./: .gitignore  CMakeLists.txt  LinkedList.c  LinkedList.h  Parallel_with_rwlock.c  Parallel_with_rwlock.h  globals.h  main.c  operations.c  operations.h  parallel_with_one_mutex.c  parallel_with_one_mutex.h  random_array.c  random_array.h  serial_impl.c  serial_impl.h
results/: results.csv
